ingress/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
    # type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
